# drf-api-permissions-postgres

./: README.md  pyproject.toml  requirements.txt
Blog/: settings.py  urls.py
Post/: models.py
Post/migrations/: 0001_initial.py
